<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ManipulatorStates" Id="{28e0b19e-eaa6-4aa1-b6c3-3133c35f0196}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE ManipulatorStates :
(
	WaitingToStart,WaitingForALid,Pciking,Placing,Stop
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>